examples/bad/static_error_invalid_type_tuple_unpack.ps
tuple<int, string, bool> tup = (1, "hello", true);
string s = tup[2];